--- a/index.html
+++ b/index.html
@@ -489,25 +489,29 @@
                     <div class="row">
                         <div class="col-md-3 col-sm-6 wow move-up">
                             <div class="fun-fact--two text-center">
-                                <div class="fun-fact__count counter">50</div>
+                                <div class="fun-fact__count counter" style="display: inline-block;">50</div>
+                                <div style="display: inline-block;font-size: 56px;color: #ffffff;margin-bottom: 20px;line-height: 1;font-weight: 700;">+</div>
                                 <h6 class="fun-fact__text">Happy clients</h6>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 wow move-up">
                             <div class="fun-fact--two text-center">
-                                <div class="fun-fact__count counter">60</div>
+                                <div class="fun-fact__count counter" style="display: inline-block;">60</div>
+                                <div style="display: inline-block;font-size: 56px;color: #ffffff;margin-bottom: 20px;line-height: 1;font-weight: 700;">+</div>
                                 <h6 class="fun-fact__text">Finished projects</h6>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 wow move-up">
                             <div class="fun-fact--two text-center">
-                                <div class="fun-fact__count counter">73</div>
+                                <div class="fun-fact__count counter" style="display: inline-block;">73</div>
+                                <div style="display: inline-block;font-size: 56px;color: #ffffff;margin-bottom: 20px;line-height: 1;font-weight: 700;">+</div>
                                 <h6 class="fun-fact__text">Skilled Experts</h6>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6 wow move-up">
                             <div class="fun-fact--two text-center">
-                                <div class="fun-fact__count counter">100</div>
+                                <div class="fun-fact__count counter" style="display: inline-block;">100</div>
+                                <div style="display: inline-block;font-size: 56px;color: #ffffff;margin-bottom: 20px;line-height: 1;font-weight: 700;">+</div>
                                 <h6 class="fun-fact__text">Media Posts</h6>
                             </div>
                         </div>
