--- a/our-clients.html
+++ b/our-clients.html
@@ -229,16 +229,20 @@
                                         </div>
 
                                         <div class="testimonial-slider__author">
+                                            
+                                            <div class="author-info">
+                                                <h6 class="name">Dr. B.M. Patil</h6>
+                                            </div>
+                                            <div class="author-info">
+                                                <h6 class="name">Principal at MGM Poly</h6>
+                                                <span class="designation">mgmpoly.com</span>
+                                            </div>
                                             <div class="testimonial-rating">
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
-                                            </div>
-                                            <div class="author-info">
-                                                <h6 class="name">Dr. B.M. Patil</h6>
-                                                <span class="designation">Principal</span>
                                             </div>
                                         </div>
                                     </div>
@@ -256,16 +260,19 @@
                                         </div>
 
                                         <div class="testimonial-slider__author">
+                                            <div class="author-info">
+                                                <h6 class="name">Prof. Aminkhan Pathan</h6>
+                                            </div>
+                                            <div class="author-info">
+                                                <h6 class="name">Lecturer at MGM IFSE</h6>
+                                                <span class="designation">mgmifse.org</span>
+                                            </div>
                                             <div class="testimonial-rating">
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
-                                            </div>
-                                            <div class="author-info">
-                                                <h6 class="name">Prof. Aminkhan Pathan</h6>
-                                                <span class="designation">Lecturer</span>
                                             </div>
                                         </div>
                                     </div>
@@ -283,16 +290,19 @@
                                         </div>
 
                                         <div class="testimonial-slider__author">
+                                            <div class="author-info">
+                                                <h6 class="name">Mr. Aditya Bhatt</h6>
+                                            </div>
+                                            <div class="author-info">
+                                                <h6 class="name">Head, RGS World</h6>
+                                                <span class="designation">rgsworld.com</span>
+                                            </div>
                                             <div class="testimonial-rating">
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
                                                 <span class="fa fa-star"></span>
-                                            </div>
-                                            <div class="author-info">
-                                                <h6 class="name">Mr. Aditya Bhatt</h6>
-                                                <span class="designation">Business Head</span>
                                             </div>
                                         </div>
                                     </div>
@@ -316,6 +326,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
+                <br>
+                <div class="section-title-wrap text-center section-space--mb_40">
+                    <h4 class="heading">Our Clients</h4>
+                </div>
                 <!-- brand logo slider -->
                 <div class="brand-logo-slider__container-area">
                     <div class="swiper-container brand-logo-slider__container">
