--- a/services.html
+++ b/services.html
@@ -199,7 +199,7 @@
 
 
     <!-- breadcrumb-area start -->
-    <div class="breadcrumb-area bg-services">
+    <div class="breadcrumb-area">
         <div class="container">
             <div class="row">
                 <div class="col-12">
