--- a/contact-us.html
+++ b/contact-us.html
@@ -228,9 +228,9 @@
                     <div class="row align-items-center">
                         <div class="col-lg-4 col-md-6">
                             <div class="conact-info-wrap mt-30">
-                                <h5 class="heading mb-20">Address</h5>
+                                <h5 class="heading mb-20">Contact</h5>
                                 <ul class="conact-info__list">
-                                    <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
+                                    <li><a href="tel:7755950285" class="hover-style-link text-black font-weight--bold">(+91) 7755 950285</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -238,15 +238,15 @@
                             <div class="conact-info-wrap mt-30">
                                 <h5 class="heading mb-20">Email</h5>
                                 <ul class="conact-info__list">
-                                    <li><a href="mail:contact@adztechsolutions.com" class="hover-style-link text-color-primary">contact@adztechsolutions.com</a></li>
+                                    <li><a href="mailto:contact@adztechsolutions.com" class="hover-style-link text-color-primary">contact@adztechsolutions.com</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6">
                             <div class="conact-info-wrap mt-30">
-                                <h5 class="heading mb-20">Contact</h5>
+                                <h5 class="heading mb-20">Address</h5>
                                 <ul class="conact-info__list">
-                                    <li><a href="#" class="hover-style-link text-black font-weight--bold">(+53)1221 09877</a></li>
+                                    <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
                                 </ul>
                             </div>
                         </div>
@@ -300,8 +300,8 @@
                             </div>
                             <ul class="footer-widget__list">
                                 <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
-                                <li><a href="mailto:contact@aeroland.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
-                                <li><a href="tel:123344556" class="hover-style-link text-black font-weight--bold">(+91)1221 09876</a></li>
+                                <li><a href="mailto:contact@adztechsolutions.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
+                                <li><a href="tel:7755950285" class="hover-style-link text-black font-weight--bold">(+91) 7755 950285</a></li>
                                 <li><a href="index.html" class="hover-style-link text-color-primary">www.adztechsolutions.com</a></li>
                             </ul>
                         </div>
