--- a/portfoli.html
+++ b/portfoli.html
@@ -584,8 +584,8 @@
                             </div>
                             <ul class="footer-widget__list">
                                 <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
-                                <li><a href="mailto:contact@aeroland.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
-                                <li><a href="tel:123344556" class="hover-style-link text-black font-weight--bold">(+91)1221 09876</a></li>
+                                <li><a href="mailto:contact@adztechsolutions.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
+                                <li><a href="tel:7755950285" class="hover-style-link text-black font-weight--bold">(+91) 7755 950285</a></li>
                                 <li><a href="index.html" class="hover-style-link text-color-primary">www.adztechsolutions.com</a></li>
                             </ul>
                         </div>
