--- a/services.html
+++ b/services.html
@@ -444,7 +444,7 @@
                                 </div>
 
                                 <div class="contact-list-item">
-                                    <a href="tel:190068668" class="single-contact-list">
+                                    <a href="tel:7755950285" class="single-contact-list">
                                         <div class="content-wrap">
                                             <div class="content">
                                                 <div class="icon">
@@ -452,12 +452,12 @@
                                                 </div>
                                                 <div class="main-content">
                                                     <h6 class="heading">Call for advice now!</h6>
-                                                    <div class="text">1900 68668</div>
+                                                    <div class="text">7755 950285</div>
                                                 </div>
                                             </div>
                                         </div>
                                     </a>
-                                    <a href="mailto:hello@mitech.com" class="single-contact-list">
+                                    <a href="contact@adztechsolutions.com" class="single-contact-list">
                                         <div class="content-wrap">
                                             <div class="content">
                                                 <div class="icon">
@@ -493,8 +493,8 @@
                             </div>
                             <ul class="footer-widget__list">
                                 <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
-                                <li><a href="mailto:contact@aeroland.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
-                                <li><a href="tel:123344556" class="hover-style-link text-black font-weight--bold">(+91)1221 09876</a></li>
+                                <li><a href="mailto:contact@adztechsolutions.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
+                                <li><a href="tel:7755950285" class="hover-style-link text-black font-weight--bold">(+91) 7755 950285</a></li>
                                 <li><a href="index.html" class="hover-style-link text-color-primary">www.adztechsolutions.com</a></li>
                             </ul>
                         </div>
