--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                                         <span class="fa fa-phone"></span>
                                                     </div>
                                                     <div class="info-content">
-                                                        <h6 class="info-title">+91 7387410117</h6>
+                                                        <h6 class="info-title">+91 7755 950285</h6>
                                                         <div class="info-sub-title">contact@adztechsolutions.com</div>
                                                     </div>
                                                 </div>
@@ -98,7 +98,7 @@
                                                         <span class="fa fa-map-marker-alt"></span>
                                                     </div>
                                                     <div class="info-content">
-                                                        <h6 class="info-title">Plot No.:52, Bhagwati Colony</h6>
+                                                        <h6 class="info-title">Bhagwati Colony</h6>
                                                         <div class="info-sub-title"> Aurangabad, Maharashtra</div>
                                                     </div>
                                                 </div>
@@ -209,7 +209,7 @@
         <div class="site-wrapper-reveal">
 
             <!--============ Software Innovation Hero Start ============-->
-            <div class="software-innovation-hero-wrapper section-space--pt_80">
+            <div class="software-innovation-hero-wrapper">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-6 col-md-6">
@@ -716,8 +716,8 @@
                             </div>
                             <ul class="footer-widget__list">
                                 <li>Plot No.:52, Bhagwati Colony, Aurangabad, Maharashtra, India</li>
-                                <li><a href="mailto:contact@aeroland.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
-                                <li><a href="tel:123344556" class="hover-style-link text-black font-weight--bold">(+91)1221 09876</a></li>
+                                <li><a href="mailto:contact@adztechsolutions.com" class="hover-style-link">contact@adztechsolutions.com</a></li>
+                                <li><a href="tel:7755950285" class="hover-style-link text-black font-weight--bold">(+91) 7755 950285</a></li>
                                 <li><a href="index.html" class="hover-style-link text-color-primary">www.adztechsolutions.com</a></li>
                             </ul>
                         </div>
