--- a/contact-us.html
+++ b/contact-us.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ADZ Tech Solutions - Contact US</title>
-    <meta name="description" content="">
+    <meta name="description" content="ADZ Tech Solutions - Contact US">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.png">
