--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ADZ Tech Solutions</title>
-    <meta name="description" content="ADZ Tech Solutions specializes in technical and IT-related services such as web development, logo designing, content Writing, social media marketing, graphics designing, etc. We put a strong focus on the needs of your business to figure out solutions that best fit your demand and nail it.">
+    <meta name="description" content="ADZ Tech Solutions specializes in technical and IT-related services such as web development, 
+    logo designing, content Writing, social media marketing, graphics designing, etc. We put a strong focus on the needs of your 
+    business to figure out solutions that best fit your demand and nail it. | We Develop As You Need">
+
+    <meta name="keywords" content="ADZ Tech Solutions specializes in technical and IT-related services such as web development, 
+    logo designing, content Writing, social media marketing, graphics designing, etc. We put a strong focus on the needs of your 
+    business to figure out solutions that best fit your demand and nail it. | ADZ | ADZ TECH SOLUTIONS | ADZ tech solutions | 
+    adz tech solutions | Adz Tech Solutions | Web Development | Social Media Marketing | Website Development | website | android 
+    | we develop as you need | Content Writing | Web Hosting | Webstie Hosting | Domain Hosting | Domain | At low price | fair price
+    | IT company | IT Services | IT industry | Information technology | adz | adz tech solutions | ADZ adz Adz | free | website free |
+    free website ">
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.png">
+    <link rel="icon" href="assets/images/favicon.png">
+    <link rel="shortcut icon" href="assets/images/favicon.png">
 
     <!-- CSS============================================ -->
 
